--- a/index.html
+++ b/index.html
@@ -15,19 +15,21 @@
   <div class="container">
 
     <!-- Form Password -->
-    <form class="js-form-password mb-3" action="https://echo.htmlacademy.ru/" method="POST">
+    <form class="js-form-password mb-3" action="https://echo.htmlacademy.ru/" method="POST" autocomplete="off">
       <label class="h5 d-block text-center my-4">Enter your password:</label>
-      <input class="js-password-input form-control mb-3 w-50 mx-auto" type="text" name="user_password"
-        placeholder="more than 8 characters" min="0" minlength="8">
+      <input class="js-password-input form-control mb-3 w-50 mx-auto" type="password" name="user_password"
+        placeholder="At least 8 characters">
       <button class="btn btn-block btn-info w-50 mx-auto">Submit</button>
     </form>
 
     <div class="alert alert-info w-50 mx-auto mb-3">Result:
-      <span class="js-result-password"></span>
+      <span class="js-password-result"></span>
     </div>
+
     <div class=" alert alert-info w-50 mx-auto">Attempts:
-      <span class="js-attempt"></span>
+      <span class="js-attempt-result">5</span>
     </div>
+
   </div>
 
 
